adding dontate page

--- a/about/index.html
+++ b/about/index.html
@@ -29,13 +29,20 @@
       <section id="intro">
         <figure><img src="/images/heros/wlf-ceti-blue-green.png" alt="About" /></figure>
         <div class="inner">
-          <h1 class="caps">Mission and History</h1>
+          <h1 class="caps">About</h1>
 
-          <p>CETI is a collective, a movement, and an intention to critically and collaboratively engage in creating our technological future. CETI emerged in 2019 after a series of messy conversations and brainstorming sessions amongst a diverse community of professionals, educators, researchers, students, artists, technologists, activists, and community organizers.</p>
+          <p>CETI is a collective, a movement, and an intention to critically and collaboratively engage in creating our technological future. CETI emerged in 2019 after a series of messy conversations and brainstorming sessions amongst a diverse interdisciplinary cross sector community of professionals, educators, researchers, students, artists, technologists, engineers, scientists, activists, policymakers, leaders, and community organizers.</p>
+          <p>CETI is a nonprofit 501(c)(3) charitable organization. Our EIN is 84-3427418</p>
+          <p>To donate to CETI please visit our donation page.</p>
+          <p><a class="button" href="/donate">Donate to CETI</a></p>
+          <br />
+          <h2>Mission</h2>
+          <p>CETI is an ambitious dynamic vision for lifelong learning, participatory research, and innovation in creative and emergent technologies. We rapidly build expertise and fluency in a diverse community across disciplines, sectors, cultures, experiences, and expertise to critically engage (with civic and social impact) with emerging technology as creators, researchers, innovators, and leaders.</p>
+          <p>At CETI, we design exciting collaborative project-based learning experiences, integrating art, engineering, mathematics, and technology, to build networks and partnerships between and across sectors to create a connected community of learning and innovation in technology, to address urgent emergent complex social, environmental, and technological challenges of the future.</p>
 
-          <p>At CETI, learning is dynamic, situational, connected, experiential, and multifaceted. Through a carefully woven tapestry of workshops, collaborative convenings, participatory research and creative projects, we build fluency and expertise in a diversity of stakeholders across sectors,cultures, experiences, and expertise to reframe our relationship with data and technology in terms centred on humans, communities, and civic and social impact.</p>
+          <p>We are passionate about increasing equity and opportunities in, and access to technology and design industries. We strongly believe that engaging a diverse community through this endeavour is essential for better ideas, conversations, and actions.</p>
 
-          <p>We emphasize collaborations and partnerships between and across sectors to create an ecosystem of individuals and organisations excited to create meaningful connections, prototypes, and experiences. Our strategy involves purposeful disruption of traditional learning paradigms, by bringing together professionals, students, leaders, and community groups in collaborative research, projects, conversations, and intensive workshops. We are passionate about increasing equity in and access to technology and design industries and strongly believe that supporting a diverse community through this endeavour is essential for better ideas, conversations, and actions.</p>
+          <p>Details on our collaboratively-created <a target="_blank" href="https://docs.google.com/document/d/1wLxtoqfb92G7KtAVbzHQF8HWa-u0Pc3z9JAUNHETjHU/edit?usp=sharing">Mission, Principles and Values, and Culture and Governance documents</a></p>
         </div>
         <!-- <figure><img src="/images/heros/wlf-orb.png" alt="About" /></figure>
         <div class="inner">
@@ -51,13 +58,6 @@
             <h2 class="caps">Join/Support</h2>
             <p>To partner with us and to learn more about or propose collaborations or projects, email us at hello@ceti.institute. We will be happy to set up a conversation and talk.</p>
             <p><a href="mailto:hello@ceti.institute" class="button">Email us</a> &nbsp; <a class="button" href="/newsletter/">Join Our Mailing List</a> &nbsp;<a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA?sub_confirmation=1" target="_blank" class="button">Subscribe On YouTube</a></p>
-            <!-- <h3>Donate</h3>
-            <a href="#" class="button">Check</a> <a href="#" class="button">PayPal</a> <a href="https://smile.amazon.com/gp/chpf/dashboard?ref_=nav_AccountFlyout_yas" class="button">AmazonSmile</a>
-            <p>To choose CETI as your non-profit charity choice in Amazon Smile, click the button above and search for Ceti. We're the first on on the serach results, based in Portland, OR.</p>
-            <a href="/newsletter" class="button">Newsletter</a> <a href="https://join.slack.com/t/ceti-institute/shared_invite/zt-t97p9tsx-T4mNJycpE8LZF9nPIxAGDA" class="button">Slack</a
-            ><!-- exp aug 15 2021-->
-            <!-- <a href="https://discord.gg/kCGamgjK" class="button">Discord</a> -->
-            <!-- exp on 7/21/21-->
           </div>
         </article>
       </section>
@@ -76,8 +76,8 @@
       function gtag() {
         dataLayer.push(arguments)
       }
-      gtag("js", new Date())
-      gtag("config", "G-CSLJ4LHBM2")
+      gtag('js', new Date())
+      gtag('config', 'G-CSLJ4LHBM2')
     </script>
   </body>
 </html>
