fixed default link color

--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,7 @@
 
           <p>CETI is a collective, a movement, and an intention to critically and collaboratively engage in creating our technological future. CETI emerged in 2019 after a series of messy conversations and brainstorming sessions amongst a diverse interdisciplinary cross sector community of professionals, educators, researchers, students, artists, technologists, engineers, scientists, activists, policymakers, leaders, and community organizers.</p>
           <p>CETI is a nonprofit 501(c)(3) charitable organization. Our EIN is 84-3427418</p>
-          <p>To donate to CETI please visit our donation page.</p>
+          <p>To donate to CETI please visit our <a href="/donate">donation page</a>.</p>
           <p><a class="button" href="/donate">Donate to CETI</a></p>
           <br />
           <h2>Mission</h2>
