updated donations page

--- a/donate/index.html
+++ b/donate/index.html
@@ -26,31 +26,61 @@
       <nav role="navigation" class="navmobile" id="mobilenavlist"></nav>
     </header>
     <main>
-      <section class="gof" id="intro">
+      <section class="light" id="intro">
         <figure><img src="/images/heros/stephen_lee_wlf.png" alt="Stephen Lee Projection Image" /></figure>
-        <div>
+        <div class="inner">
           <h1>Donate</h1>
-          <p>CETI is a nonprofit 501(c)(3) charitable organization. Our EIN is 84-3427418. All donations to CETI and to our projects and programs are tax-deductible.</p>
+          <p>Your gift will help us create a uniquely inspiring learning and innovation environment that prepares our community for futures of creativity, innovation, leadership, influence, and impact in creative and emergent technology.</p>
+          <p>CETI is a nonprofit 501(c)(3) charitable organization. Our EIN is 84-3427418. All donations to CETI and to our projects and programs are tax-deductible. We will send you a letter of appreciation and acknowledgement for your records.</p>
 
-          <p>We will send you a letter of appreciation and acknowledgement for your records. We will also reach out to ask for more information about how you wish for us to acknowledge your contribution on our website and on any materials. Reach out In addition, we consider you a valued member of the CETI community and will include you in our Newsletter mailing list (sent about 6 times a year) and invitations to our programs.</p>
+          <p>We will reach out for information about how you wish for us to acknowledge your contribution on our website and on any materials. <a href="mailto:hello@ceti.institute">Contact us</a> if you have questions.</p>
 
           <h2>Ways to Support CETI</h2>
-          <ul>
-            <li>Donate by check</li>
-            <li>Donate via PayPal</li>
-            <li>
-              Make an in-kind dontation:
-              <ul>
-                <li>Support our events with food and/or drink.</li>
-                <li>Support our lab and events with equipment dontations.</li>
-              </ul>
-            </li>
 
-            <li>Add CETI has your Amazon Smile non-profit of choice</li>
-          </ul>
+          <h3>Donate by check</h3>
+          <p>Checks should be made out to CETI and mailed to:</p>
+          <p>
+            CETI<br />
+            2510 NE Knott Street<br />
+            Portland OR 97212
+          </p>
 
-          <h2>Who We Are</h2>
-          <p>CETI (a Creative and Emergent Technology Institute) offers a vision for advanced lifelong learning, research, and professional development, supporting a diverse and interdisciplinary community of practitioners, professionals, educators, students, and researchers to successfully create the future. Through a carefully woven tapestry of workshops, institutes, participatory research, projects, convenings, and actions, we inspire and empower our community to create imaginative and impactful responses to emergent social and technological challenges.</p>
+          <p>Please include (in the memo line or an accompanying note) the name of the project or program for a designated gift. Donate via PayPal: To make a donation via Paypal, click the button below. Please indicate via a note if this is a donation to a specific project or program that you want to support.</p>
+
+          <h3>Donate By Wire Transfer</h3>
+          <p>To make a donation via bank wire transfer, use the information below. For both domestic and international transfers, please indicate in the notes field that this is a donation to the name of the project that you want to support.</p>
+
+          <p>
+            To make a cash gift by wire transfer from within the United States, send to: <br /><br />
+            U.S. Bank<br />
+            Wire Transfer Department<br />
+            PO Box 64830<br />
+            St. Paul, MN 55164-0830<br />
+            Account/Organisation Name: CETI<br />
+            Account Number: 1536697377741<br />
+            Routing Number (for Domestic Wire Transfers): 123000220
+          </p>
+
+          <p>
+            To make a cash gift by wire transfer from outside of the United States, send to:<br /><br />
+            U.S. Bank<br />
+            Wire Transfer Department<br />
+            PO Box 64830<br />
+            St. Paul, MN 55164-0830<br />
+            Account/Organisation Name: CETI<br />
+            Account Number: 1536697377741<br />
+            Swift Code (for International Wire Transfers): USBKUS44IMT
+          </p>
+
+          <p>Please also contact Dr. Nandini Ranganathan at <a href="mailto:nandini@ceti.institute">nandini@ceti.institute</a>.</p>
+          <p>Make an in-kind donation Support our events, programs, and lab with food, drink, equipment and materials donations Reach out to hello@ceti.institute. We will be delighted to follow up with you.</p>
+
+          <h3>Add CETI as your Amazon Smile non-profit of choice</h3>
+          <p><a href="https://smile.amazon.com/gp/chpf/dashboard?ref_=nav_AccountFlyout_yas" target="_blank" class="button">CETI on Amazon</a></p>
+          <p>To choose CETI as your non-profit charity in Amazon Smile, click the button above and search for Ceti. We're the first on the search results, based in Portland, OR. We would be grateful if you were able to make your Amazon purchases through this link.</p>
+
+          <h3>Employer Matching Gifts</h3>
+          <p>Some employers and foundations match the individual charitable gifts of their employees and their spouses, retirees, and in some cases, board members. To find out if your company has a matching gift policy, check with your employer's human resources department.</p>
         </div>
       </section>
     </main>
