new content for about page

--- a/about/index.html
+++ b/about/index.html
@@ -9,12 +9,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&family=Source+Sans+Pro:wght@400;700&display=swap" rel="preload" as="style" />
     <link rel="stylesheet" href="/css/style.css" />
     <meta property="og:title" content="Ceti" />
-    <meta property="og:description" content="CETI offers a vision for lifelong learning, professional development, transformation. We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future." />
+    <meta
+      property="og:description"
+      content="
+    CETI offers a vision for lifelong learning, professional development, transformation. We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future."
+    />
     <meta property="og:image" content="http://ceti.institute/images/brand/ceti_logo-orange.png" />
     <meta property="og:url" content="https://ceti.institute" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:site_name" content="CETI Institute" />
-    <meta name="twitter:image:alt" content="CETI Institute" />
+    <meta
+      name="twitter:image:alt"
+      content="
+    CETI Institute"
+    />
     <meta name="twitter:site" content="@ceti_institute" />
   </head>
   <body class="company-page">
@@ -31,33 +39,58 @@
         <div class="inner">
           <h1 class="caps">About</h1>
 
-          <p>CETI is a collective, a movement, and an intention to critically and collaboratively engage in creating our technological future. CETI emerged in 2019 after a series of messy conversations and brainstorming sessions amongst a diverse interdisciplinary cross sector community of professionals, educators, researchers, students, artists, technologists, engineers, scientists, activists, policymakers, leaders, and community organizers.</p>
-          <p>CETI is a nonprofit 501(c)(3) charitable organization. Our EIN is 84-3427418</p>
-          <p>To donate to CETI please visit our <a href="/donate">donation page</a>.</p>
+          <p><span class="orange-text">CETI</span> is a collective, a movement, and an intention to critically and collaboratively engage in creating our technological future. <span class="orange-text">CETI</span> emerged in 2019 after a series of messy conversations and brainstorming sessions amongst a diverse interdisciplinary cross sector community of professionals, educators, researchers, students, artists, technologists, engineers, scientists, activists, policymakers, leaders, and community organizers.</p>
+          <p><span class="orange-text">CETI</span> is a nonprofit 501(c)(3) charitable organization. Our EIN is 84-3427418</p>
+          <p>To donate to <span class="orange-text">CETI</span> please visit our <a href="/donate">donation page</a>.</p>
           <p><a class="button" href="/donate">Donate to CETI</a></p>
           <br />
           <h2>Mission</h2>
-          <p>CETI is an ambitious dynamic vision for lifelong learning, participatory research, and innovation in creative and emergent technologies. We rapidly build expertise and fluency in a diverse community across disciplines, sectors, cultures, experiences, and expertise to critically engage (with civic and social impact) with emerging technology as creators, researchers, innovators, and leaders.</p>
+          <p><span class="orange-text">CETI</span> is an ambitious dynamic vision for lifelong learning, participatory research, and innovation in creative and emergent technologies. We rapidly build expertise and fluency in a diverse community across disciplines, sectors, cultures, experiences, and expertise to critically engage (with civic and social impact) with emerging technology as creators, researchers, innovators, and leaders.</p>
           <p>At CETI, we design exciting collaborative project-based learning experiences, integrating art, engineering, mathematics, and technology, to build networks and partnerships between and across sectors to create a connected community of learning and innovation in technology, to address urgent emergent complex social, environmental, and technological challenges of the future.</p>
 
           <p>We are passionate about increasing equity and opportunities in, and access to technology and design industries. We strongly believe that engaging a diverse community through this endeavour is essential for better ideas, conversations, and actions.</p>
 
+          <h2>Principles and Values</h2>
           <p>Details on our collaboratively-created <a target="_blank" href="https://docs.google.com/document/d/1wLxtoqfb92G7KtAVbzHQF8HWa-u0Pc3z9JAUNHETjHU/edit?usp=sharing">Mission, Principles and Values, and Culture and Governance documents</a></p>
+
+          <h2>Affect The Future</h2>
+
+          <p><span class="orange-text">CETI</span> mobilizes a diverse, cross-sector, interdisciplinary community to collaboratively create imaginative and impactful responses to address emergent social, environmental, and technological challenges and affect the future technological landscape.</p>
+
+          <h2>Learning: Bringing Our Best</h2>
+          <p><span class="orange-text">CETI</span> imagines learning as lifelong, transformative, evolving, personal, experiential, interdisciplinary, and creative. We create an environment that inspires everybody to contribute to the peak of their abilities -- with fluency and confidence — as creators and leaders.</p>
+
+          <h2>Research and Action in the World</h2>
+          <p>We mobilize/empower our communities to lead in the critical engagement with and social and civic impact of creative and emergent technologies and data. The results of our research and projects manifest as tools, experiences, and strategic actions that we cannot yet imagine that produce transformative impact in the world.</p>
+
+          <h2>Emergence</h2>
+          <p>Solutions to complex challenges emerge from a tapestry of participatory generative conversations and actions that include all stakeholders and a mix of experts and non-experts with shared purpose and a diversity of skills, experience, expertise, and cultural context. We create community-driven messy convenings recognizing that imaginative impactful responses emerge from unexpected collisions of people, practices, and ideas.</p>
+
+          <h2>participatory Technology: Innovation By/With/For All of Us</h2>
+          <p>We look at challenges -- and solutions -- through the lens of humanity. We design and create with all our stakeholders, accounting for the implications and impact of our work. We believe that true innovation is inclusive in both process and result. We prepare a diverse community to thoughtfully, intentionally, ethically, and confidently lead the design of impactful cutting-edge technology, tools, and experiences, emphasizing deep consideration of the implications and impact in the world.</p>
+
+          <h2>Creative Experiments</h2>
+          <p>A culture/philosophy of creative experimentation and play is embedded in our endeavours - fostering creativity and risk-taking, building trust and confidence, and creating the relationships and networks that lead to impactful and joyful learning and innovation.</p>
+
+          <h2>Trust, Collaboration, and Community</h2>
+          <p>By cultivating deep, lasting relationships and partnerships across and within our communities, we serve as a trusted host, as a bridge and translator, instigating and inspiring transformative change through powerful and strategic collaborations across sectors, disciplines, and communities that in turn foster continued learning for all participants.</p>
+
+          <h2>Democratizing Systems</h2>
+          Our work, our structures, and our culture emphasize participatory processes and projects centralizing community voices. We prioritize actions that share power with all stakeholder and partners, especially including previously excluded populations. Details on our collaboratively-created Mission, Principles and Values, and Culture and Governance documents
         </div>
-        <!-- <figure><img src="/images/heros/wlf-orb.png" alt="About" /></figure>
-        <div class="inner">
-          <h2>Ceti Principles and Values</h2>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti reprehenderit fugiat ad placeat officiis aliquam aliquid, velit necessitatibus architecto error.</p>
-          <a href="#" class="button">Learn more</a>
-        </div> -->
       </section>
       <section>
         <article class="orange-light">
           <figure><img src="/images/heros/wlf-eleven.png" alt="About" /></figure>
           <div class="inner">
             <h2 class="caps">Join/Support</h2>
-            <p>To partner with us and to learn more about or propose collaborations or projects, email us at hello@ceti.institute. We will be happy to set up a conversation and talk.</p>
-            <p><a href="mailto:hello@ceti.institute" class="button">Email us</a> &nbsp; <a class="button" href="/newsletter/">Join Our Mailing List</a> &nbsp;<a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA?sub_confirmation=1" target="_blank" class="button">Subscribe On YouTube</a></p>
+            <p>To partner with us or to propose collaborations and projects, please reach out to hello@ceti.institute. We would be delighted to have a conversation.</p>
+            <p><a href="mailto:hello@ceti.institute" class="button">Email Us</a></p>
+            <p>To keep up with our activities:</p>
+
+            <p><a class="button" href="/newsletter/">Sign up for our Newsletter</a> &nbsp;<a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA?sub_confirmation=1" target="_blank" class="button">Subscribe On YouTube</a> &nbsp; <a href="https://www.eventbrite.com/o/ceti-28009365641" target="_blank" class="button">Sign up on EventBrite</a></p>
+            <p>Follow us on social media</p>
+            <p><a href="https://www.instagram.com/ceti.institute/" class="button" target="_blank">Instagram</a> &nbsp; <a href="https://twitter.com/ceti_institute" class="button" target="_blank">Twitter</a> &nbsp; <a href="https://www.facebook.com/CETI.Institute/" target="_blank" class="button">Facebook</a> &nbsp;</p>
           </div>
         </article>
       </section>
