--- a/donate/index.html
+++ b/donate/index.html
@@ -46,6 +46,11 @@
           </p>
 
           <p>Please include (in the memo line or an accompanying note) the name of the project or program for a designated gift. Donate via PayPal: To make a donation via Paypal, click the button below. Please indicate via a note if this is a donation to a specific project or program that you want to support.</p>
+          <form action="https://www.paypal.com/donate" method="post" target="_top">
+            <input type="hidden" name="hosted_button_id" value="8DYYB4FUK35GY" />
+            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+            <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+          </form>
 
           <h3>Donate By Wire Transfer</h3>
           <p>To make a donation via bank wire transfer, use the information below. For both domestic and international transfers, please indicate in the notes field that this is a donation to the name of the project that you want to support.</p>
