added in kind formatting

--- a/donate/index.html
+++ b/donate/index.html
@@ -78,7 +78,9 @@
           </p>
 
           <p>Please also contact Dr. Nandini Ranganathan at <a href="mailto:nandini@ceti.institute">nandini@ceti.institute</a>.</p>
-          <p>Make an in-kind donation Support our events, programs, and lab with food, drink, equipment and materials donations Reach out to hello@ceti.institute. We will be delighted to follow up with you.</p>
+          <h3>Make an in-kind donation</h3>
+          <p>Support our events, programs, and lab with food, drink, equipment and materials donations Reach out to hello@ceti.institute. We will be delighted to follow up with you.</p>
+          <p><a href="mailto:hello@ceti.institute?subject=In-kind donation" class="button">In-kind donations</a></p>
 
           <h3>Add CETI as your Amazon Smile non-profit of choice</h3>
           <p><a href="https://smile.amazon.com/gp/chpf/dashboard?ref_=nav_AccountFlyout_yas" target="_blank" class="button">CETI on Amazon</a></p>
