changed text placement for amazon

--- a/donate/index.html
+++ b/donate/index.html
@@ -86,8 +86,9 @@
           <p><a href="mailto:hello@ceti.institute?subject=In-kind donation" class="button">In-kind donations</a></p>
 
           <h3>Add CETI as your Amazon Smile non-profit of choice</h3>
+
+          <p>To choose CETI as your non-profit charity in Amazon Smile, click the button below and search for Ceti. We're the first on the search results, based in Portland, OR. We would be grateful if you were able to make your Amazon purchases through this link.</p>
           <p><a href="https://smile.amazon.com/gp/chpf/dashboard?ref_=nav_AccountFlyout_yas" target="_blank" class="button">CETI on Amazon</a></p>
-          <p>To choose CETI as your non-profit charity in Amazon Smile, click the button above and search for Ceti. We're the first on the search results, based in Portland, OR. We would be grateful if you were able to make your Amazon purchases through this link.</p>
 
           <h3>Employer Matching Gifts</h3>
           <p>Some employers and foundations match the individual charitable gifts of their employees and their spouses, retirees, and in some cases, board members. To find out if your company has a matching gift policy, check with your employer's human resources department.</p>
