--- a/donate/index.html
+++ b/donate/index.html
@@ -37,7 +37,7 @@
 
           <h2>Ways to Support CETI</h2>
 
-          <h3>Donate by check</h3>
+          <h3 id="check">Donate by check</h3>
           <p>Checks should be made out to CETI and mailed to:</p>
           <p>
             CETI<br />
@@ -47,7 +47,7 @@
 
           <p>Please include (in the memo line or an accompanying note) the name of the project or program for a designated gift. Donate via PayPal: To make a donation via Paypal, click the button below. Please indicate via a note if this is a donation to a specific project or program that you want to support.</p>
 
-          <h3>Donate via PayPal</h3>
+          <h3 id="paypal">Donate via PayPal</h3>
           <p>To make a donation via Paypal, click the button below. Please indicate via a note if this is a donation to a specific project or program that you want to support.</p>
           <form action="https://www.paypal.com/donate" method="post" target="_top">
             <input type="hidden" name="hosted_button_id" value="8DYYB4FUK35GY" />
@@ -55,7 +55,7 @@
             <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
           </form>
 
-          <h3>Donate By Wire Transfer</h3>
+          <h3 id="wire">Donate By Wire Transfer</h3>
           <p>To make a donation via bank wire transfer, use the information below. For both domestic and international transfers, please indicate in the notes field that this is a donation to the name of the project that you want to support.</p>
 
           <p>
@@ -85,12 +85,12 @@
           <p>Support our events, programs, and lab with food, drink, equipment and materials donations Reach out to hello@ceti.institute. We will be delighted to follow up with you.</p>
           <p><a href="mailto:hello@ceti.institute?subject=In-kind donation" class="button">In-kind donations</a></p>
 
-          <h3>Add CETI as your Amazon Smile non-profit of choice</h3>
+          <h3 id="amazon">Add CETI as your Amazon Smile non-profit of choice</h3>
 
           <p>To choose CETI as your non-profit charity in Amazon Smile, click the button below and search for Ceti. We're the first on the search results, based in Portland, OR. We would be grateful if you were able to make your Amazon purchases through this link.</p>
           <p><a href="https://smile.amazon.com/gp/chpf/dashboard?ref_=nav_AccountFlyout_yas" target="_blank" class="button">CETI on Amazon</a></p>
 
-          <h3>Employer Matching Gifts</h3>
+          <h3 id="matching">Employer Matching Gifts</h3>
           <p>Some employers and foundations match the individual charitable gifts of their employees and their spouses, retirees, and in some cases, board members. To find out if your company has a matching gift policy, check with your employer's human resources department.</p>
         </div>
       </section>
