added dontate link to footer

--- a/programs/xrchive/index.html
+++ b/programs/xrchive/index.html
@@ -153,7 +153,7 @@
             PSU School of Art + Design<br />
             Open Signal
           </p>
-          <p><a class="button" href="mailto:hello@ceti.institute">Support the Project</a></p>
+          <p><a class="button" href="/button">Support the Project</a></p>
           <br>
         </div>
       </section>
