removed dec 21 events from the homepge

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									<div class="inner">
 										<h2>XRchive</h2>
 										<h3>Creating Social Documentary Experiences</h3>
-										<p>CETI and our partners will collaborate with local communities to create poignant and powerful XR experiences of memory and imagination. We focus on two main sets of experiences emphasizing themes of migrations and displacements, of social and systemic injustice/exclusion/racism/erasure, and of future possibility. They are:</p></p>
+										<p>CETI and our partners will collaborate with local communities to create poignant and powerful XR experiences of memory and imagination. We focus on two main sets of experiences emphasizing themes of migrations and displacements, of social and systemic injustice/exclusion/racism/erasure, and of future possibility. </p>
 										<p><a href="/programs/xrchive" class="button">Find Out More</a></p><br>
-										<h2>Invitation to Create</h2>
+										<!-- <h2>Invitation to Create</h2>
 									<h3>Creating Social Documentary Experiences</h3>
 									<article class="grid-two">
 										<div>
@@ -93,7 +93,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 										<div>
 										<p>Date and time<br>
 										Saturday, December 4, 2021<br>Virtual Zoom meeting<br>
-										1:30 PM - 3:30 PM PST</p>
+										1:30 PM - 3:30 PM PST</p> -->
 										</div>
 									</article>
 								
