fixed link color

--- a/index.html
+++ b/index.html
@@ -79,7 +79,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									<div class="inner">
 										<h2>XRchive</h2>
 										<h3>Creating Social Documentary Experiences</h3>
-										<p>CETI and our partners will collaborate with local communities to create poignant and powerful XR experiences of memory and imagination. We focus on two main sets of experiences emphasizing themes of migrations and displacements, of social and systemic injustice/exclusion/racism/erasure, and of future possibility. </p>
+										<p>CETI and our partners will collaborate with local communities to create poignant and powerful XR experiences of memory and imagination. We focus on two main sets of experiences emphasizing themes of migrations and displacements, of social and systemic injustice/exclusion/racism/erasure, and of future possibility. They are:
+
+										</p>
+										<ul>
+											<li>Places, communities, culture, memories, and future vision of the Albina region in N/NE Portland;</li>
+<li>A virtual memorial/meditation/reflection amongst previously unmarked graves for Chinese immigrant railroad workers in SE Portland.</li>
+										</ul>
 										<p><a href="/programs/xrchive" class="button">Find Out More</a></p><br>
 										<!-- <h2>Invitation to Create</h2>
 									<h3>Creating Social Documentary Experiences</h3>
