--- a/programs/xrchive/index.html
+++ b/programs/xrchive/index.html
@@ -146,7 +146,7 @@
             PSU School of Art + Design<br />
             Open Signal
           </p>
-          <p><a class="button" href="/button">Support the Project</a></p>
+          <p><a class="button" href="/donate">Support the Project</a></p>
           <br>
         </div>
       </section>
