--- a/newsletter/index.html
+++ b/newsletter/index.html
@@ -29,37 +29,76 @@
       <section class="light" id="intro">
         <div id="subscribe-form" class="white-popup-block">
           <!-- Begin Mailchimp Signup Form -->
-          <link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css" />
+          <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css" rel="stylesheet" type="text/css" />
+          <style type="text/css">
+            #mc_embed_signup {
+              background: #fff;
+              clear: left;
+              font: 14px Helvetica, Arial, sans-serif;
+              width: 600px;
+            }
+            /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+          </style>
           <div id="mc_embed_signup">
             <form action="https://institute.us15.list-manage.com/subscribe/post?u=01995859ca60a242158eb0eaf&amp;id=2404c39c03" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
               <div id="mc_embed_signup_scroll">
-                <h2>
-                  Please Subscribe!<br />
-                  CETI newsletter
-                </h2>
+                <h2>Subscribe</h2>
                 <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
                 <div class="mc-field-group">
                   <label for="mce-EMAIL">Email Address <span class="asterisk">*</span> </label>
                   <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" />
                 </div>
                 <div class="mc-field-group">
-                  <label for="mce-FNAME">First Name </label>
-                  <input type="text" value="" name="FNAME" class="" id="mce-FNAME" />
+                  <label for="mce-FNAME">First Name <span class="asterisk">*</span> </label>
+                  <input type="text" value="" name="FNAME" class="required" id="mce-FNAME" />
                 </div>
                 <div class="mc-field-group">
-                  <label for="mce-LNAME">Last Name </label>
-                  <input type="text" value="" name="LNAME" class="" id="mce-LNAME" />
+                  <label for="mce-LNAME">Last Name <span class="asterisk">*</span> </label>
+                  <input type="text" value="" name="LNAME" class="required" id="mce-LNAME" />
                 </div>
-                <div id="mce-responses" class="clear">
+                <div class="mc-field-group input-group">
+                  <strong>What brings you to CETI? <span class="asterisk">*</span> </strong>
+                  <ul>
+                    <li><input type="radio" value="I'm interested in collaborating on projects" name="MMERGE3" id="mce-MMERGE3-0" /><label for="mce-MMERGE3-0">I'm interested in collaborating on projects</label></li>
+                    <li><input type="radio" value="I want to teach workshops" name="MMERGE3" id="mce-MMERGE3-1" /><label for="mce-MMERGE3-1">I want to teach workshops</label></li>
+                    <li><input type="radio" value="I want to attend workshops" name="MMERGE3" id="mce-MMERGE3-2" /><label for="mce-MMERGE3-2">I want to attend workshops</label></li>
+                    <li><input type="radio" value="All of the above!" name="MMERGE3" id="mce-MMERGE3-3" /><label for="mce-MMERGE3-3">All of the above!</label></li>
+                  </ul>
+                </div>
+                <div id="mce-responses" class="clear foot">
                   <div class="response" id="mce-error-response" style="display: none"></div>
                   <div class="response" id="mce-success-response" style="display: none"></div>
                 </div>
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div style="position: absolute; left: -5000px" aria-hidden="true"><input type="text" name="b_01995859ca60a242158eb0eaf_2404c39c03" tabindex="-1" value="" /></div>
-                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button" /></div>
+                <div class="optionalParent">
+                  <div class="clear foot">
+                    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button" />
+                    <p class="brandingLogo">
+                      <a href="http://eepurl.com/hWyBQb" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg" /></a>
+                    </p>
+                  </div>
+                </div>
               </div>
             </form>
           </div>
+          <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+          <script type="text/javascript">
+            ;(function ($) {
+              window.fnames = new Array()
+              window.ftypes = new Array()
+              fnames[0] = 'EMAIL'
+              ftypes[0] = 'email'
+              fnames[1] = 'FNAME'
+              ftypes[1] = 'text'
+              fnames[2] = 'LNAME'
+              ftypes[2] = 'text'
+              fnames[3] = 'MMERGE3'
+              ftypes[3] = 'radio'
+            })(jQuery)
+            var $mcj = jQuery.noConflict(true)
+          </script>
           <!--End mc_embed_signup-->
         </div>
         <br /><br />
