added some heros, still working

--- a/programs/enchanted-tech-22/index.html
+++ b/programs/enchanted-tech-22/index.html
@@ -46,15 +46,16 @@
 
           <p><strong>Our festival</strong> this year will be made up of a series of Institutes for Youth, Educators, Community, and Professionals. <strong>Experimenting</strong> with (and learning) a variety of digital/coding platforms/tools (including p5, unity, 8th wall, ml/ai tools), with <strong>interactivity</strong> (using sensors, microcontrollers, and mobile devices), and with <strong>augmenting reality</strong>, we will introduce techniques, ideas form experts, ending in a <strong>collaborative</strong> show in <strong>September 2022</strong>.</p>
 
-          <p>Register now to receive updates.</p>
-          <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfU4X3jw2rNHJJJiGF9NFlQq1MdEwkpBLFMQ6LywOORscffAg/viewform?vc=0&c=0&w=1&flr=0" target="_blank" class="button">Enchanted Tech Registration for PPS Students</a></p>
-          <a href="https://forms.gle/UYY3unVSf2Dfd46u6" target="_blank" class="button">Enchanted Tech Registration for General Public</a>
+          <h3>Apply to join us this summer:</h3>
+          <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfU4X3jw2rNHJJJiGF9NFlQq1MdEwkpBLFMQ6LywOORscffAg/viewform?vc=0&c=0&w=1&flr=0" target="_blank" class="button">Registration for PPS Students</a></p>
+          <a href="https://forms.gle/UYY3unVSf2Dfd46u6" target="_blank" class="button"> Registration for General Public</a>
 
           <p>Learn more about our E-Textiles festival from summer 2021:</p>
           <p><a href="/programs/enchanted-tech/" class="button">E-Textiles Fest 2021</a></p>
         </div>
       </section>
       <section>
+        
         <div class="inner">
           <h3>Enchanted Objects <br class="hide-desktop"><span class="orange-text">Jul 18 - Aug 28</span></h3>
           <p>Objects that create music, that light up when they see us, and that serve as portals to wondrous experiences that reveal hidden stories about our city, that allow us to  walk in somebody else’s shoes, that imagine magical futures, that remember, and that make us visible.</p>
@@ -63,10 +64,14 @@
       <section>
         <div class="inner">
           <h3>Augmented Storytelling <br class="hide-desktop"><span class="orange-text">Jul 31  - Aug 8</span></h3>
-          <p>Objects that create music, that light up when they see us, and that serve as portals to wondrous experiences that reveal hidden stories about our city, that allow us to  walk in someone else's shoes, that imagine magical futures, that remember, and that make us visible.</p>
+          <p>Using/creating existing markers in the world (stickers, statues, enchanted pebbles) as breadcrumbs and tags, we will collaboratively create exciting, delightful, and subversive stories of our city and communities - real and imagined experiences that reveal new ways of seeing the world, to tell stories, to explore identities, to call for action, to subvert symbols of power, and to delight.</p>
         </div>
       </section>
-      <section>
+      <section class="subsection">
+        <figure><img src="/images/heros/enchanted-tech-short3.png" alt="Enchanted Tech Summer Murals" /></figure>
+        <div class="header-hero-text">
+          <h2>Interactive Murals</h2>
+        </div>
         <div class="inner">
           <h3>Interactive Murals (beginners)/Interactive Installations (advanced) <br class="hide-desktop"><span class="orange-text">Aug 5 - Aug 18</span></h3>
           <p>Create hybrid physical/digital/virtual images that respond to our presence, gestures, and actions, revealing stories historical and speculative of our communities and spaces.  We'll explore different impactful ways to create interactive experiences, and (optionally) design and prototype a mural to add to a wall in the city (spaces tbd...)</p>
@@ -74,8 +79,8 @@
       </section>
       <section>
         <div class="inner">
-          <h3>Interactive Murals (beginners)/Interactive Installations (advanced) <br class="hide-desktop"><span class="orange-text">Aug 5 - Aug 18</span></h3>
-          <p>What is the CETI Enchanted technology festival: A  series of participatory formal and informal learning experiences  composed of workshops, inspiring speakers (demos/show and tell) and panels, critical dialogue, time for experimentation and prototyping, mentoring, peer learning,  collaborative idea generation, experimentation, and prototyping, family-style meals and  discussions, and research "walks". Our introductory workshops will be interspersed with advanced workshops for experts/professionals including advanced tools and techniques, as well as short intensive Institutes on Theoretical/Conceptual institutes on Impact, trends, policies, and applications.
+          <h3>What is the CETI Enchanted technology festival</h3>
+          <p>A  series of participatory formal and informal learning experiences  composed of workshops, inspiring speakers (demos/show and tell) and panels, critical dialogue, time for experimentation and prototyping, mentoring, peer learning,  collaborative idea generation, experimentation, and prototyping, family-style meals and  discussions, and research "walks". Our introductory workshops will be interspersed with advanced workshops for experts/professionals including advanced tools and techniques, as well as short intensive Institutes on Theoretical/Conceptual institutes on Impact, trends, policies, and applications.
 
 <h3>Where:</h3>
 <p><strong>CETI Lab at PSU</strong><br>
@@ -95,12 +100,22 @@ Fariborz Maseeh Hall <strong>Room 218</strong> (1 block from the max and bus mal
 <li>Augmented experiences - we will create templates - sound or p5 creations - create your markers and create experiences.  Theme of City as canvas</li>
 </ul>
 <hr>
+</div>
+</section>
+<section class="subsection eventbrite">
+<figure><img src="/images/heros/eventbrite-hero.png" alt="Enchanted Tech Summer Workshop" /></figure>
+        <div class="header-hero-text">
+          <h2>eventbrite</h2>
+        </div>
+<div class="inner">
+  <p>Individual workshops will be on eventbrite</p>
+<p><a href="https://www.eventbrite.com/o/ceti-28009365641" class="button light">Follow us on eventbrite</a></p>
 
-<p>Individual workshops will be on eventbrite</p>
-<p><a href="https://www.eventbrite.com/o/ceti-28009365641" class="button">Follow us on eventbrite</a></p>
+</div>
+</section>
 
-<hr>
-
+<section class="subsection">
+  <div class="inner">
 <blockquote><span class="orange-text">AR pebbles and artifacts</span> (hidden objects telling important stories when activated); AR <span class="orange-text">animated zines</span> that can dance and sing;  Tech tools for activists (augmented billboards that challenge inequity, emphasize presence); <span class="orange-text">murals</span> that speak when you make connection; digital dressup - <span class="orange-text">augmented wearables</span>; creating avatars;  Hidden stories/<span class="orange-text">puzzle hunt</span> through city choosing signs and  landmarks that have meaning to the youth; interactive installations and cityscapes;  <span class="orange-text">music-making objects</span>.   
 </blockquote>
         </div>
