--- a/programs/enchanted-tech-22/index.html
+++ b/programs/enchanted-tech-22/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/style.css" />
 
     <meta property="og:title" content="Ceti" />
-    <meta property="og:description" content="Join CETI's Summer Festival of learning and creative experiments focused on wearables, costumes, masks, avatars and cosplay using creative technology, electronics, craft, sewing, music, and art. Our accessible, diy approach to tech is personal, and community-driven, combining the imagination, everyday materials, craft techniques, and cutting-edge technologies." />
+    <meta property="og:description" content="Join CETI's 6 week Summer Festival of learning and creative experiments focused on xr, ar, creative code, smart tech, interactive objects, art, and music to craft delightful and imaginative interactive objects, stories, spaces, and experiences placed around the city. The CETI Summer Institutes are  using cutting edge technologies " />
     <meta property="og:image" content="http://ceti.institute/images/brand/ceti_logo-orange.png" />
     <meta property="og:url" content="https://ceti.institute" />
     <meta name="twitter:card" content="/images/promo/enchanted-tech/enchantedtech-postcard-EN5x7.png" />
@@ -40,7 +40,7 @@
           </h2>
           <h3>City as Canvas</h3>
 
-          <p>AThe CETI Summer Institutes are 6 weeks of collaborative learning, play, and creative experiments using cutting edge technologies (xr, creative code, smart tech, interactive objects), art, and music to craft delightful and imaginative interactive objects, stories, spaces, and experiences placed around the city.</p>
+          <p>The CETI Summer Institutes are 6 weeks of collaborative learning, play, and creative experiments using cutting edge technologies (xr, creative code, smart tech, interactive objects), art, and music to craft delightful and imaginative interactive objects, stories, spaces, and experiences placed around the city.</p>
 
           <p>Join us for a summer of <strong></strong>art, technology, craft, fabrication and imagination</strong> as we infuse the cityscape with hidden messages, images, and stories. Through our <strong>workshops and institutes</strong>, learn to create objects, images, music, and experiences (physical and virtual) to reveal fantastical joyful voices, experiences, memories, and futures.</p>
 
