added new hero to etech

--- a/programs/enchanted-tech-22/index.html
+++ b/programs/enchanted-tech-22/index.html
@@ -28,7 +28,7 @@
     </header>
     <main>
       <section id="intro">
-        <figure><img src="/images/heros/creative-drone.png" alt="Enchanted Tech Summer Workshop" /></figure>
+        <figure><img src="/images/heros/creative-drone2.png" alt="Enchanted Tech Summer Workshop" /></figure>
         <div class="header-hero-text">
           <h1>Enchanted Tech 2022</h1>
           <h2>Summer Festival</h2>
@@ -55,7 +55,8 @@
         </div>
       </section>
       <section>
-        
+                <figure><img src="/images/heros/objects3.png" alt="Enchanted Objects" /></figure>
+
         <div class="inner">
           <h3>Enchanted Objects <br class="hide-desktop"><span class="orange-text">Jul 18 - July 25</span></h3>
           <p>Objects that create music, that light up when they see us, and that serve as portals to wondrous experiences that reveal hidden stories about our city, that allow us to  walk in somebody else’s shoes, that imagine magical futures, that remember, and that make us visible.</p>
