--- a/programs/enchanted-tech-22/index.html
+++ b/programs/enchanted-tech-22/index.html
@@ -47,8 +47,8 @@
           <p><strong>Our festival</strong> this year will be made up of a series of Institutes for Youth, Educators, Community, and Professionals. <strong>Experimenting</strong> with (and learning) a variety of digital/coding platforms/tools (including p5, unity, 8th wall, ml/ai tools), with <strong>interactivity</strong> (using sensors, microcontrollers, and mobile devices), and with <strong>augmenting reality</strong>, we will introduce techniques, ideas form experts, ending in a <strong>collaborative</strong> show in <strong>September 2022</strong>.</p>
 
           <h3>Apply to join us this summer:</h3>
-          <p><a href="https://forms.gle/wu1GPugyBDk3BHZ67" target="_blank" class="button">Registration for Enchanted Tech</a></p>
-         
+          <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfU4X3jw2rNHJJJiGF9NFlQq1MdEwkpBLFMQ6LywOORscffAg/viewform?vc=0&c=0&w=1&flr=0" target="_blank" class="button">Registration for PPS Students</a></p>
+          <a href="https://forms.gle/UYY3unVSf2Dfd46u6" target="_blank" class="button"> Registration for General Public</a>
 
           <p>Learn more about our E-Textiles festival from summer 2021:</p>
           <p><a href="/programs/enchanted-tech/" class="button">E-Textiles Fest 2021</a></p>
